--- a/analysis/simulation_E_S_three_tissues.Rmd
+++ b/analysis/simulation_E_S_three_tissues.Rmd
@@ -33,6 +33,18 @@ plot_PIP_combined <- function(configtag, runtag,  simutags, ...){
    f1 <- caliPIP_plot_E_S_combined(phenofs, susieIfs, ...) 
    return(f1)
 }
+plot_PIP_csindex <- function(configtag, runtag,  simutags, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".susieIrss.txt")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".susieIrss.txt")
+   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
 plot_PIP_L1 <- function(configtag, runtag,  simutags, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".L1.susieIrss.txt")
@@ -234,24 +246,6 @@ plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E
 ```
 
 ### PIP Calibration Plot
-```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
-f1 <- plot_PIP(configtag, runtag, paste(5, 1:5, sep = "-"), main = "")
-f1
-```
-
-### PIP Calibration Plot (L1=1)
-```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
-f1 <- plot_PIP_L1(configtag, runtag, paste(5, 1:5, sep = "-"), main = "")
-f1
-```
-
-### PIP Calibration Plot (True parameters)
-```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
-f1 <- plot_PIP_true(configtag, runtag, paste(5, 1:5, sep = "-"), main = "")
-f1
-```
-
-### PIP Calibration Plot
 ```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
 load("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/data/mashr_sqtl/sqtl/mashr/intron_mapping.RData")
 f1 <- plot_PIP(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
@@ -261,7 +255,6 @@ gridExtra::grid.arrange(f1, f2, ncol =2)
 
 ### PIP Calibration Plot (cs_index!=0)
 ```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-load("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/data/mashr_sqtl/sqtl/mashr/intron_mapping.RData")
 f1 <- plot_PIP_csindex(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
 f2 <-  plot_PIP_combined_csindex(configtag, runtag, simutags, main = "Gene PIP Calibration")
 gridExtra::grid.arrange(f1, f2, ncol =2)
