--- a/analysis/multi_tissue_ldmerge_validation_xgboost_fit.Rmd
+++ b/analysis/multi_tissue_ldmerge_validation_xgboost_fit.Rmd
@@ -110,12 +110,30 @@ DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'cap
 DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/aFib-ebi-a-GCST006414_all4db.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
 ## Gene labels
 
 ```{r warning=F,message=FALSE}
 load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost/gene_labels_xgboost_aFib-ebi-a-GCST006414.rdata")
 DT::datatable(df_all,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Predicted gene labels'),options = list(pageLength = 5))
 ```
+
+
 
 # IBD-ebi-a-GCST004131
 
@@ -171,6 +189,22 @@ DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'cap
 
 ```{r warning=F,message=FALSE}
 load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost/IBD-ebi-a-GCST004131_kegg.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/IBD-ebi-a-GCST004131_all4db.rdata")
 DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
@@ -250,6 +284,21 @@ DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'cap
 DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/LDL-ukb-d-30780_irnt_all4db.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
 ## Gene labels
 
 ```{r warning=F,message=FALSE}
@@ -311,6 +360,22 @@ DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'cap
 
 ```{r warning=F,message=FALSE}
 load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost/SBP-ukb-a-360_kegg.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/SBP-ukb-a-360_all4db.rdata")
 DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
@@ -390,6 +455,22 @@ DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'cap
 DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/SCZ-ieu-b-5102_all4db.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
 ## Gene labels
 
 ```{r warning=F,message=FALSE}
@@ -451,6 +532,22 @@ DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'cap
 
 ```{r warning=F,message=FALSE}
 load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost/WBC-ieu-b-30_kegg.rdata")
+DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+### Modelling binarized y using logistic regression for binary classification
+
+```{r warning=F,message=FALSE}
+DT::datatable(importance_matrix_b,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
+```
+
+
+## 4 data base jointly
+
+### Modelling z-scores using regression with squared loss
+
+```{r warning=F,message=FALSE}
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/xgboost_jointly/WBC-ieu-b-30_all4db.rdata")
 DT::datatable(importance_matrix_z,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Importance matrix'),options = list(pageLength = 5))
 ```
 
