--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -37,6 +37,7 @@ editor_options:
 
   * seven uncorrelated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_uncorrelated.html)
   * seven correlated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_correlated.html)
+  * seven correlated brain tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_brain_tissues_correlated.html)
   * E and S three tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_E_S_three_tissues.html)
 
 # Region Merge
