--- a/analysis/simulation_seven_tissues_uncorrelated.Rmd
+++ b/analysis/simulation_seven_tissues_uncorrelated.Rmd
@@ -37,6 +37,18 @@ plot_PIP_combined <- function(configtag, runtag,  simutags, ...){
    f1 <- caliPIP_plot_combined(phenofs, susieIfs, ...) 
    return(f1)
 }
+plot_PIP_csindex <- function(configtag, runtag,  simutags, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".susieIrss.txt")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".susieIrss.txt")
+   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
 ```
 
 ## Simulation 1: 3% PVE for Causal Tissues and 0% PVE for Non-causal Tissues. 
@@ -75,6 +87,7 @@ sum(results_df$n_detected_comb_pip_in_causal)/sum(results_df$n_detected_comb_pip
 
 ### Estimated Prior Inclusion Probability
 ```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
+pdf(file = "./prior_7unccor.pdf", width = 8, height = 5)
 y1 <- results_df$prior_Liver
 y2 <- results_df$prior_Lung
 y3 <- results_df$prior_Whole_Blood
@@ -85,11 +98,13 @@ y7 <- results_df$prior_Stomach
 
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"),ylim=c(0,0.025),ylab="Prior inclusion")
+plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"),ylim=c(0,0.025),ylab="Prior inclusion",cex.lab=1.3)
+dev.off()
 ```
 
 ### Estimated PVE
 ```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
+pdf(file = "./pve_7unccor.pdf", width = 8, height = 5)
 y1 <- results_df$pve_Liver
 y2 <- results_df$pve_Lung
 y3 <- results_df$pve_Whole_Blood
@@ -100,7 +115,8 @@ y7 <- results_df$pve_Stomach
 
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"),ylim=c(0,0.06),ylab="PVE")
+plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"),ylim=c(0,0.06),ylab="PVE",cex.lab=1.3)
+dev.off()
 ```
 
 ### Estimated Prior Variance
@@ -146,6 +162,37 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Hear
 f1 <- plot_PIP(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
 f2 <-  plot_PIP_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
 gridExtra::grid.arrange(f1, f2, ncol =2)
+```
+
+### PIP Calibration Plot (cs_index!=0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+pdf(file = "./PIPs_7unccor.pdf", width = 8, height = 4)
+f1 <- plot_PIP_csindex(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
+f2 <-  plot_PIP_combined_csindex(configtag, runtag, simutags, main = "Gene PIP Calibration")
+gridExtra::grid.arrange(f1, f2, ncol =2)
+dev.off()
+```
+
+```{r}
+pdf(file = "./prop_7unccor.pdf", width = 8, height = 5)
+prop_df <- get_pip_distr(results_dir,runtag,configtag,simutags,thin,sample_size,PIP_threshold)
+prop_df <- prop_df[,2:8]/prop_df$total_pips
+prop_df <- prop_df %>% summarise(across(everything(), list(mean = mean)))
+long_df <- pivot_longer(prop_df, cols = everything(), names_to = "Tissue", values_to = "Mean")
+tissues <- c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach")
+means <- as.numeric(prop_df[1, ])
+plot.new()
+grid()
+par(new = TRUE)
+barplot(means, 
+        names.arg = tissues, 
+        xlab = "", 
+        ylab = "Proportion of PIP", 
+        col = c("#e41a1c", "#377eb8", "#4daf4a", "#984ea3", "#ff7f00", "#f781bf", "#a65628"),
+        border = NA,
+        ylim = c(0,0.5),
+        cex.lab=1.3)
+dev.off()
 ```
 
 ### Separate effect size parameters
